--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,68 @@
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-  }
-  
-  .activity {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-  }
-  .buttons {
-    margin: 20px 0;
-  }
-  
-  #timer {
-    margin: 40px 0 0 0;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(var(--cols), 1fr);
-    grid-template-rows: repeat(var(--rows), 1fr);
-    gap: 10px;
-  }
-  
-  .grid .item {
-    background-color: lightgray;
-    /* color: transparent; */
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    cursor: pointer;
-    transition: background-color 223ms ease;
-  }
-  
-  .grid .item.flipped {
-    background-color: lightblue;
-    color: white;
-  }
-  
-  .grid .item.matched {
-    background-color: lightgreen;
-    color: white;
-    cursor: default;
-  }
-  
-  button {
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-  
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+.activity {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px auto 0;
+  width: max-content;
+}
+.buttons {
+  margin: 0 0 20px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(var(--cols), 1fr);
+  grid-template-rows: repeat(var(--rows), 1fr);
+  gap: 10px;
+}
+
+.grid .item {
+  background-color: lightgray;
+  color: transparent;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 223ms ease;
+}
+
+.grid .item.flipped {
+  background-color: lightblue;
+  color: white;
+}
+
+.grid .item.matched {
+  background-color: lightgreen;
+  /* color: white; */
+  cursor: default;
+}
+
+.grid .item.timeout {
+  background-color: #f08080;
+  color: white;
+  cursor: default;
+}
+
+button {
+  width: 100px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: 1px solid #000000;
+  border-radius: 3px;
+}
+.alert {
+  color: white;
+  background-color: #f08080;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
